Fixed scroll on mobile

--- a/styles/saved.module.css
+++ b/styles/saved.module.css
@@ -6,9 +6,14 @@
 	min-height: 80vh;
 }
 
+.saved_sidebar button {
+	background: transparent;
+	border: 1px solid #aaaaaa73;
+}
+
 .sidebar {
 	flex: 0 0 280px;
-	max-height: 80vh;
+	height: calc(100vh - 100px); /* Adjusted from max-height */
 	overflow: auto;
 	border-right: 1px solid #333;
 	padding-right: 12px;
@@ -97,7 +102,7 @@
 .content {
 	flex: 1;
     padding: 25px 15px 50px;
-	max-height: 80vh;
+	height: calc(100vh - 100px); /* Adjusted from max-height */
 	overflow: auto;
 }
 
